# dumb-cicd

./: Cargo.toml
src/: main.rs
