[package]
name = "dumb-cicd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5.9"
anyhow = "1.0"

tracing = { version = "0.1", features = [ "log-always" ] }
env_logger = "0.9"

async-trait = "0.1"

tokio = { version = "1.21", features = [ "full" ] }
hyper = "0.14"

axum = "0.5"
axum-server = { version = "0.4", features = [ "tls-rustls" ] }

tower = "0.4.13"

clap = { version = "4.0", features = [ "derive" ] }

instant-acme = "0.1"
rcgen = "0.10"
